# FluxHolographyCAS

./: .gitignore  DEPENDENCIES.md  FH_backbone.ipynb  INSTALL.md  QUICKSTART.md  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
cas/: __init__.py  fh_complementary_cas.py  fh_core_cas.py  fh_corollaries_cas.py  fh_horizons_cosmo_cas.py  fh_master_cas.py  fh_selection_integrability_iw_cas.py  fh_tick_noneq_cas.py
examples/observations/: README.md  compare_with_observations.py
examples/predictions/: README.md  test_new_prediction.py
