[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-holography-cas"
version = "0.1.0"
description = "Computer Algebra System for Flux Holography - symbolic verification of the FH backbone"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Enzo Cabrera Iglesias", email = "ecabreraigl@example.com"}
]
maintainers = [
    {name = "Enzo Cabrera Iglesias", email = "ecabreraigl@example.com"}
]
keywords = [
    "flux-holography",
    "general-relativity",
    "black-holes",
    "cosmology",
    "symbolic-computation",
    "entropy",
    "thermodynamics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "sympy>=1.12",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "ipython>=8.0",
    "jupyter>=1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18",
]
viz = [
    "matplotlib>=3.5",
    "seaborn>=0.12",
]
all = [
    "flux-holography-cas[dev,docs,viz]",
]

[project.urls]
Homepage = "https://github.com/ecabreraigl/FluxHolographyCAS"
Documentation = "https://github.com/ecabreraigl/FluxHolographyCAS/blob/main/README.md"
Repository = "https://github.com/ecabreraigl/FluxHolographyCAS"
Issues = "https://github.com/ecabreraigl/FluxHolographyCAS/issues"

[project.scripts]
fh-cas = "cas.fh_master_cas:main"

[tool.setuptools]
packages = ["cas"]

[tool.setuptools.package-data]
cas = ["*.py"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--verbose",
    "--cov=cas",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["cas"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
